--- a/css/homepage.css
+++ b/css/homepage.css
@@ -309,13 +309,13 @@ body h1 {
       background-color: #717171;
   }
 
-  @media only screen and (max-width: 360px) {
+  @media screen and (max-device-width: 480px) {
 
   #calendar {
     width: 258px;
     position: absolute;
     top: calc(0% + 690px);
-    left: 90px;
+    left: 180px;
     padding-bottom: 50px;
   }  
 
