--- a/css/index.css
+++ b/css/index.css
@@ -390,7 +390,7 @@
 /* Responsive implementation */
 
 /* Adjust the following styles for smaller screens */
-@media only screen and (max-width: 360px) {
+@media screen and (max-device-width: 480px) {
   .grid-container {
     grid-template-areas:
       'logo'
@@ -417,11 +417,11 @@
     padding: 0;
     text-align: center;
     line-height: 1em;
-    width: 360px;
+    width: 680px;
   }
 
   .item1 img {
-    width: 340px;
+    width: 680px;
   }
 
   .item p {
